# mfsk-core

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
docs/: 0.3.1_PLAN.md  0.3.2_PLAN.md  0.3.3_PLAN.md  0.4.0_PLAN.md  EMBEDDED.ja.md  EMBEDDED.md  LIBRARY.ja.md  LIBRARY.md  PR_TIER_1_1_REV2.md  PR_TIER_1_3_REV2.md  PR_TIER_1_4_REV2.md  RELEASE_NOTES_0.3.1.md  RELEASE_NOTES_0.3.2.md  RELEASE_NOTES_0.3.3.md  ROADMAP.md  UVPACKET.ja.md  UVPACKET.md  embedded_llr_quantization.md
embedded-poc/: bindings.h
embedded-poc/embedded-shared/: Cargo.toml
embedded-poc/embedded-shared/src/: dual_core.rs  esp_dsp_fft.rs  internal_pool.rs  lib.rs  pipeline.rs  stage1_inc.rs  wav_sim.rs
embedded-poc/embedded-shared/src/apps/: compute_bench.rs  mod.rs  rx_wavsim.rs
embedded-poc/esp32s3/: Cargo.toml  README.md  sdkconfig.defaults
embedded-poc/esp32s3/src/: bindings.h  esp_dsp_fft.rs  main.rs
embedded-poc/idf-component/: README.md
embedded-poc/m5stack-core2/: CLAUDE.md  Cargo.toml  README.md  sdkconfig.defaults
embedded-poc/m5stack-core2/src/: dual_core.rs  esp_dsp_fft.rs  main.rs  stage1_inc.rs
embedded-poc/m5stack-s3/: .gitignore  CLAUDE.md  Cargo.toml  README.md  partitions.csv  sdkconfig.defaults
embedded-poc/m5stack-s3-app/: Cargo.toml  partitions.csv  sdkconfig.defaults
embedded-poc/m5stack-s3-app/src/: adif.rs  audio.rs  board.rs  buttons.rs  civ.rs  decode_pipeline.rs  display.rs  flash_log.rs  log_sink.rs  main.rs  pmic.rs  qso.rs  snr_norm.rs  time_sync.rs  tx_picker.rs  uac.rs
embedded-poc/m5stack-s3-app/src/ui/: decoded_list.rs  menu.rs  mod.rs  state.rs  status_bar.rs  waterfall.rs
embedded-poc/m5stack-s3/.cargo/: config.toml
embedded-poc/m5stack-s3/src/: main.rs
embedded-poc/scripts/: flash-monitor.sh
mfsk-core/: Cargo.toml
mfsk-core/examples/: uvpacket_samples.rs
mfsk-core/src/: lib.rs  registry.rs
mfsk-core/src/core/: baseline.rs  dotprod.rs  equalize.rs  fft.rs  llr.rs  mod.rs  pipeline.rs  protocol.rs  scalar.rs  sync.rs  tx.rs
mfsk-core/src/core/dsp/: downsample.rs  fft_15.rs  fft_mixed_3840.rs  gfsk.rs  mod.rs  resample.rs  subtract.rs
mfsk-core/src/fec/conv/: fano.rs  mod.rs
mfsk-core/src/fec/ldpc/: bp.rs  mod.rs  osd.rs  params.rs
mfsk-core/src/fec/ldpc240_101/: mod.rs
mfsk-core/src/fec/rs/: mod.rs
mfsk-core/src/fst4/: decode.rs
mfsk-core/src/ft4/: decode.rs  encode.rs  mod.rs  refine_fine.rs  subtract.rs
mfsk-core/src/ft8/: baseline.rs  decode.rs  decode_block.rs  downsample.rs  equalizer.rs  llr.rs  mod.rs  params.rs  refine_fine.rs  subtract.rs  sync.rs  wave_gen.rs
mfsk-core/src/jt9/: baseband.rs  decode.rs  demod_bb.rs  mod.rs  rx.rs  search.rs  softsym.rs
mfsk-core/src/msg/: ap.rs  hash_table.rs  jt72.rs  mod.rs  packet_bytes.rs  pipeline_ap.rs  q65.rs  wsjt77.rs  wspr.rs
mfsk-core/src/q65/: mod.rs  rx.rs
mfsk-core/src/uvpacket/: framing.rs  interleaver.rs  message.rs  mod.rs  protocol.rs  puncture.rs  rx.rs  sync_pattern.rs  tx.rs
mfsk-core/src/wspr/: baseband.rs  coarse_baseband.rs  decode.rs  demod.rs  mod.rs  osd.rs  rx.rs  search.rs  spectrogram.rs  subtract.rs  tx.rs
mfsk-core/tests/: fst4_wsjtx_samples.rs  ft4_decode_with_options.rs  ft4_diag_low_snr.rs  ft4_subtract_pipeline.rs  ft4_wsjtx_samples.rs  ft8_coarse_sync_concurrent.rs  ft8_decode_block_coarse_diag.rs  ft8_decode_block_depth_sweep.rs  ft8_decode_block_pass1_sweep.rs  ft8_decode_block_real_qso.rs  ft8_decode_block_snr_sweep.rs  ft8_decode_frame_with_ap.rs  ft8_qso3_apoff_recall.rs  ft8_qso3_apon_recall.rs  ft8_qso3_coarse_sync_diag.rs  ft8_qso3_jtdx_recall.rs  ft8_reference_suite_recall.rs  jt9_wsjtx_samples.rs  ldpc_min_sum.rs  protocol_invariants.rs  q65_wsjtx_samples.rs  uvpacket_afc.rs  uvpacket_awgn.rs  uvpacket_demod_diagnostic.rs  uvpacket_fm_channel.rs  uvpacket_ldpc_direct.rs  uvpacket_modem_diag.rs  uvpacket_multichannel.rs  uvpacket_noise_floor.rs  uvpacket_per_modes_sweep.rs  uvpacket_pi4_dqpsk_eq.rs  uvpacket_rayleigh.rs  uvpacket_snr_calibration.rs  uvpacket_ssb_channel.rs  wspr_wsjtx_samples.rs
mfsk-core/tests/common/: air_channel.rs  channel.rs  mod.rs
mfsk-ffi/: Cargo.toml  README.md
mfsk-ffi-ft8/: Cargo.toml  build.rs  cbindgen.toml
mfsk-ffi-ft8/examples/: streaming_recipe.c
mfsk-ffi-ft8/include/: mfsk_ft8.h
mfsk-ffi-ft8/src/: lib.rs
mfsk-ffi-ft8/tests/: streaming.rs
mfsk-ffi-ft8/tests/c_smoke/: smoke.c  tx_rx_round_trip.c
mfsk-ffi/src/: lib.rs
