[package]
name        = "mfsk-core"
version     = "0.4.1"
edition     = "2024"
license     = "GPL-3.0-or-later"
description = "Pure-Rust library for WSJT-family digital amateur-radio modes (FT8/FT4/FST4/WSPR/JT9/JT65/Q65): protocol traits, DSP, FEC codecs, message codecs, decoders and synthesisers — unified behind a zero-cost generic abstraction."
repository  = "https://github.com/jl1nie/mfsk-core"
readme      = "../README.md"
keywords    = ["wsjt", "ft8", "q65", "amateur-radio", "dsp"]
categories  = ["science", "encoding", "multimedia::audio"]

[features]
default      = ["std", "ft8", "ft4", "parallel", "fft-rustfft"]

# Standard-library availability. Pulls in `rustfft` (std-only) and
# enables the rayon-based parallel iterators; required for every
# protocol's wide-band decode path because `rustfft::FftPlanner` is
# the default FFT backend. `no_std + alloc` builds turn this off and
# pick a no_std FFT implementation via the `fft-*` features below.
std          = ["alloc", "dep:rustfft"]

# `no_std + alloc` baseline. All protocol modules that allocate
# (`Vec`, `Box`, `String`) need this; only purely-stack code can
# avoid it. The crate top-level enables `extern crate alloc` whenever
# this feature is on.
alloc        = []

# Aggregate features.
full         = ["std", "fft-rustfft", "ft8", "ft4", "fst4", "wspr", "jt9", "jt65", "q65", "packet-bytes", "uvpacket"]

# Embedded presets (no_std + alloc, no rustfft, no rayon).
# `embedded-rx` pulls `fft-extern` so the caller binary supplies an
# FftPlanner impl (esp-dsp on ESP32-S3, CMSIS-DSP on RP2350, etc).
embedded-tx  = ["alloc", "ft8", "ft4", "wspr"]
embedded-rx  = ["alloc", "ft8", "ft4", "wspr", "fft-extern"]

# Target-specific presets. ESP32-S3 (Xtensa LX7 + HW FPU + esp-dsp ASM,
# typical 8 MB PSRAM module) is the embedded reference platform; this
# alias bundles the right baseline so caller crates only have to flip
# one feature.
esp32s3      = ["embedded-rx"]

# FFT backend selection. `mfsk-core::core::fft::FftPlanner` is the
# trait every decode-side caller talks to; one of these features must
# be on whenever decode-side code is compiled (host gets rustfft;
# embedded targets bring their own backend through the extern Rust
# factory `mfsk_core_make_default_fft_planner` — see core::fft docs).
fft-rustfft  = ["std", "dep:rustfft"]
fft-extern   = ["alloc"]

# Lightweight modes — embedded-port-clean. `fft-rustfft` (host) or
# `fft-extern` (embedded) is required at the crate level for the
# decode pipeline; the protocol features themselves only enable the
# protocol-specific glue.
ft8          = []
ft4          = []
wspr         = []
packet-bytes = []

# Heavy modes — these still call `rustfft` directly (out of scope of
# the embedded port). Pulling them implies the host build via
# `fft-rustfft` (which transitively requires `std`).
fst4         = ["fft-rustfft"]
jt9          = ["fft-rustfft"]
jt65         = ["fft-rustfft"]
q65          = ["fft-rustfft"]

# uvpacket pulls in fst4 because it reuses the Ldpc240_101 codec
# whose `Wsjt77Message::verify_info` length-dispatch logic (CRC-24
# vs CRC-14) is wired through fst4's path.
uvpacket     = ["fst4"]
parallel     = ["std", "dep:rayon"]
osd-deep     = []
eq-fallback  = []

[dependencies]
# `num-complex` carries the `Float` trait via num-traits; under no_std
# we need `libm` to provide sin/cos/sqrt/etc. The std build pulls
# them via num-traits/std (transitively from rustfft) and ignores libm.
num-complex = { version = "0.4", default-features = false, features = ["libm"] }
# Direct dep so call sites can `use num_traits::Float` to get
# `.atanh()` / `.tanh()` / `.sqrt()` / etc. under no_std. The `libm`
# feature provides the actual math impls; under std these become
# no-op forwards to the f32 inherent methods.
num-traits  = { version = "0.2", default-features = false, features = ["libm"] }
rustfft     = { version = "6", optional = true }
crc         = { version = "3", default-features = false }
rayon       = { version = "1", optional = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("std","alloc","ft8","ft4","fst4","wspr","jt9","jt65","q65","packet-bytes","uvpacket","parallel","osd-deep","eq-fallback","full","embedded-tx","embedded-rx","esp32s3","fft-rustfft","fft-extern"))',
] }

# Build docs.rs with every protocol feature enabled so users browsing
# the online docs see the complete API. The `--cfg docsrs` flag lets
# us expose feature-gated items with visible "available on crate
# feature …" badges (this build passes it; gate any such annotation
# on `#[cfg(docsrs)]` if we ever add one).
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
