[package]
name        = "mfsk-core"
version     = "0.5.3"
edition     = "2024"
license     = "GPL-3.0-or-later"
description = "Pure-Rust WSJT-family decoders and synthesisers (FT8 FT4 FST4 WSPR JT9 JT65 Q65) behind a zero-cost Protocol trait. Host (rustfft) or no_std embedded targets (ESP32-S3, RP2350, Cortex-M) via a pluggable FFT backend; optional fixed-point hot path for FPU-less MCUs."
repository  = "https://github.com/jl1nie/mfsk-core"
readme      = "../README.md"
keywords    = ["wsjt", "ft8", "q65", "amateur-radio", "embedded"]
categories  = ["science", "encoding", "multimedia::audio", "embedded", "no-std"]

[features]
default      = ["std", "ft8", "ft4", "parallel", "fft-rustfft"]

# Standard-library availability. Pulls in `rustfft` (std-only) and
# enables the rayon-based parallel iterators; required for every
# protocol's wide-band decode path because `rustfft::FftPlanner` is
# the default FFT backend. `no_std + alloc` builds turn this off and
# pick a no_std FFT implementation via the `fft-*` features below.
std          = ["alloc"]

# `no_std + alloc` baseline. All protocol modules that allocate
# (`Vec`, `Box`, `String`) need this; only purely-stack code can
# avoid it. The crate top-level enables `extern crate alloc` whenever
# this feature is on.
alloc        = []

# Aggregate features.
full         = ["std", "fft-rustfft", "ft8", "ft4", "fst4", "wspr", "jt9", "jt65", "q65", "packet-bytes", "uvpacket"]

# Embedded presets (no_std + alloc, no rustfft, no rayon).
# `embedded-rx` pulls `fft-extern` so the caller binary supplies an
# FftPlanner impl (esp-dsp on ESP32-S3, CMSIS-DSP on RP2350, etc).
embedded-tx  = ["alloc", "ft8", "ft4", "wspr"]
embedded-rx  = ["alloc", "ft8", "ft4", "wspr", "fft-extern"]

# Target-specific presets. ESP32-S3 (Xtensa LX7 + HW FPU + esp-dsp ASM,
# typical 8 MB PSRAM module) is the embedded reference platform; this
# alias bundles the right baseline so caller crates only have to flip
# one feature.
esp32s3      = ["embedded-rx"]

# FFT backend selection. `mfsk-core::core::fft::FftPlanner` is the
# trait every decode-side caller talks to; one of these features must
# be on whenever decode-side code is compiled (host gets rustfft;
# embedded targets bring their own backend through the extern Rust
# factory `mfsk_core_make_default_fft_planner` — see core::fft docs).
fft-rustfft  = ["std", "dep:rustfft"]
fft-extern   = ["alloc"]

# Fixed-point migration of `decode_block` hot internals (i16
# spectrogram, i16 LLR, optional i16 BP). Off by default — host stays
# bit-identical to the existing f32 path. Embedded targets that turn
# this on get halved PSRAM bandwidth + a viable path on FPU-less MCUs
# (RP2040, RP2350-Hazard3, Cortex-M0/M0+/M3). See plan
# `~/.claude/plans/giggly-stirring-origami.md` and the per-stage
# Q-format table therein.
fixed-point  = []

# Fixed-point LDPC BP + LLR (i16 NMS / Q11 LLR) — keeps the LLR/BP
# iteration loop in integer arithmetic to match the rest of the
# `fixed-point` path. Useful for FPU-less targets (RP2040, M0+)
# where f32 emulation dominates BP cost; on Core2/LX6 the FPU makes
# f32 BP ~1 ms/decode already, so this is mainly an
# architectural-consistency feature.
fixed-point-llr = ["fixed-point"]
# Backward-compat alias for the old name. New code should use
# `fixed-point-llr`; this alias will be retired after the next minor
# release.
fixed-point-bp = ["fixed-point-llr"]

# Q3 i8 LLR / BP scalar (range ±16, 1/8 LSB) — halves BP scratch vs
# `fixed-point-llr` (Q11i16) at the cost of coarser LLR quantisation.
# Targets memory-constrained MCUs where the extra 6 KB of internal DRAM
# is more valuable than the recall delta. Implies `fixed-point-llr`
# (the integer LLR pipeline) and overrides the `LlrT` type in
# `ft8::decode_block` to `Q3i8`. Mutually exclusive with the f32 LLR
# default — pick at most one of {none, fixed-point-llr, llr-i8}.
llr-i8 = ["fixed-point-llr"]

# Fixed-point cs (complex symbol spectra) — stores cs entries as
# `Cmplx<Q14i16>` (Q14 fixed-point i16 per re/im) instead of
# `Cmplx<f32>`. Halves cs memory footprint (8 KB → 4 KB per
# Box<[[Cmplx<S>;8];79]>) and removes the f32 cast at the DFT-output
# boundary on the embedded fixed-point path. Only valuable in
# combination with `fixed-point` (the spec / DFT-internal i16 path);
# pulls in `fixed-point-llr` so the integer pipeline runs end-to-end.
fixed-point-cs = ["fixed-point", "fixed-point-llr"]

# Fixed-point coarse_sync inner loop (allsum / t / t0 in i32 instead of
# f32). Architecturally completes the integer pipeline so FPU-less
# targets (RP2040, Cortex-M0+, RP2350-Hazard3) avoid f32 emulation in
# stage 2. **Hurts** on targets with a hardware FPU + separate INT/FPU
# units (notably ESP32 LX6 / LX7), where the f32 path overlapped allsum
# updates on the FPU with index arithmetic on the ALU; collapsing both
# onto the integer ALU serialises them and costs ~25 % stage-2
# wall-clock on Core2. Off by default — flip on for FPU-less builds.
fixed-point-coarse-i32 = ["fixed-point"]

# Always-on coarse_sync sub-stage profiling. Same output as setting
# `MFSK_PROFILE_COARSE=1` on host, but works on embedded targets where
# the env var is not reachable. Only useful when investigating stage-2
# wall-clock breakdown — adds 4 timestamp reads per `coarse_sync` call,
# negligible cost.
profile-coarse = ["std"]

# Lightweight modes — embedded-port-clean. `fft-rustfft` (host) or
# `fft-extern` (embedded) is required at the crate level for the
# decode pipeline; the protocol features themselves only enable the
# protocol-specific glue.
ft8          = []
ft4          = []
wspr         = []
packet-bytes = []

# Heavy modes — these still call `rustfft` directly (out of scope of
# the embedded port). Pulling them implies the host build via
# `fft-rustfft` (which transitively requires `std`).
fst4         = ["fft-rustfft"]
jt9          = ["fft-rustfft"]
jt65         = ["fft-rustfft"]
q65          = ["fft-rustfft"]

# uvpacket pulls in fst4 because it reuses the Ldpc240_101 codec
# whose `Wsjt77Message::verify_info` length-dispatch logic (CRC-24
# vs CRC-14) is wired through fst4's path.
uvpacket     = ["fst4"]
parallel     = ["std", "dep:rayon"]
osd-deep     = []
eq-fallback  = []

[dependencies]
# `num-complex` carries the `Float` trait via num-traits; under no_std
# we need `libm` to provide sin/cos/sqrt/etc. The std build pulls
# them via num-traits/std (transitively from rustfft) and ignores libm.
num-complex = { version = "0.4", default-features = false, features = ["libm"] }
# Direct dep so call sites can `use num_traits::Float` to get
# `.atanh()` / `.tanh()` / `.sqrt()` / etc. under no_std. The `libm`
# feature provides the actual math impls; under std these become
# no-op forwards to the f32 inherent methods.
num-traits  = { version = "0.2", default-features = false, features = ["libm"] }
rustfft     = { version = "6", optional = true }
crc         = { version = "3", default-features = false }
rayon       = { version = "1", optional = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("std","alloc","ft8","ft4","fst4","wspr","jt9","jt65","q65","packet-bytes","uvpacket","parallel","osd-deep","eq-fallback","full","embedded-tx","embedded-rx","esp32s3","fft-rustfft","fft-extern","fixed-point","fixed-point-bp","fixed-point-llr","fixed-point-cs","fixed-point-coarse-i32","llr-i8","profile-coarse"))',
] }

# Build docs.rs with every protocol feature enabled so users browsing
# the online docs see the complete API. The `--cfg docsrs` flag lets
# us expose feature-gated items with visible "available on crate
# feature …" badges (this build passes it; gate any such annotation
# on `#[cfg(docsrs)]` if we ever add one).
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
