[package]
name        = "mfsk-ffi-ft8"
version     = "0.5.1"
edition     = "2024"
license     = "GPL-3.0-or-later"
publish     = false
description = "Embedded-friendly C ABI for the FT8 decoder slice of mfsk-core. Pairs with esp-idf / RP2040 / Cortex-M C/C++ projects via a static library + cbindgen-generated header. **Distributed as prebuilt binaries on GitHub Releases (linux-x86_64, esp32-xtensa, esp32s3-xtensa); not on crates.io** — same `publish = false` policy as the host `mfsk-ffi` shim."

[lib]
name       = "mfsk_ft8"
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
# Default: host build with rustfft. Pulls the same FFT backend as
# `mfsk-core`'s host default; `cargo build --release` from a normal
# host produces a `libmfsk_ft8.{so,dylib,a}` you can link from any
# C/C++ tool. Embedded callers turn this off.
default = ["host"]

# Host alias — full FT8 decode + encode with rustfft.
host = ["mfsk-core/std", "mfsk-core/ft8", "mfsk-core/fft-rustfft"]

# Embedded-fixed-point — `no_std + alloc` for ESP32 / RP2040 /
# Cortex-M C projects that supply their own FFT + dot-product
# backends via the `mfsk_core_make_default_fft_planner` and
# `mfsk_core_dot_q15_i32` extern Rust symbols. See
# `embedded-poc/idf-component/` for an esp-idf bridge example.
#
# **Pure no_std** (no `std` propagated to mfsk-core) so the resulting
# `libmfsk_ft8.a` doesn't carry Rust's std runtime. The linking C
# project must provide a `#[panic_handler]` and `#[global_allocator]`
# via a small Rust shim — `embedded-poc/idf-component/shim/` is the
# template.
embedded-fixed-point = [
    "mfsk-core/alloc",
    "mfsk-core/ft8",
    "mfsk-core/fft-extern",
    "mfsk-core/fixed-point",
    "mfsk-core/fixed-point-llr",
]

# Provide default `#[panic_handler]` + `#[global_allocator]` inside
# `mfsk-ffi-ft8` itself, hooked to standard libc `malloc`/`free`/
# `abort` (esp-idf, newlib, picolibc satisfy this). Enable this
# alongside `embedded-fixed-point` for **cross-target builds**
# (xtensa-esp32-espidf, xtensa-esp32s3-espidf, RP2040, Cortex-M)
# so the resulting `libmfsk_ft8.a` drops straight into a C link
# without the user needing a Rust shim. **Do not enable on host
# targets** (linux/macOS/windows): host `cdylib`/`staticlib`
# always link some unwinding stub that already provides a
# `panic_impl` lang item, conflicting with the one this feature
# adds. Disable also when stacking another Rust runtime in the
# same image.
embedded-runtime = []

[dependencies]
mfsk-core = { path = "../mfsk-core", version = "0.5.1", default-features = false }

[build-dependencies]
cbindgen = "0.29"
