[package]
name = "mfsk-core-m5stack-core2"
version = "0.1.0"
authors = ["Minoru Tomobe <minoru.tomobe@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.82"

[[bin]]
name = "mfsk-core-m5stack-core2"
harness = false # disable cargo's built-in test harness

[profile.release]
# `opt-level = 1` mirrors the ESP32-S3 PoC: same Xtensa-Rust LLVM
# regression at opt-level "s"/"z" with f32-select patterns. The
# `qsb_partial_gain` workaround in mfsk-core dodges the trigger but
# keeping opt-level low keeps the ELF debuggable.
opt-level = 1

[profile.dev]
debug = true
opt-level = 1

[patch.crates-io]
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys.git" }
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal.git" }
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc.git" }

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.52.1", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
embassy-time = { version = "0.5", features = ["generic-queue-8"] }

# Sibling crate. Excluded from the host workspace (`/Cargo.toml`
# `exclude = ["embedded-poc"]`) so host `cargo build` only touches
# mfsk-core / mfsk-ffi against the stable toolchain. `fft-extern`
# routes `default_planner()` to the binary-supplied `EspDspPlanner`
# (see `src/esp_dsp_fft.rs`); the `embedded-rx` preset bundles the
# alloc/no-rustfft/no-rayon flags. `ft8` only — FT4/WSPR/Q65 deferred
# until decode timing is confirmed.
mfsk-core = { path = "../../mfsk-core", default-features = false, features = ["alloc", "std", "ft8", "fft-extern", "fixed-point", "fixed-point-llr", "profile-coarse"] }
# C ABI surface — exercised by the FFI smoke call in `decode_one`
# (see `MFSK_FFI_FT8_SMOKE` env-style toggle in `main.rs`). Same
# `mfsk_core_*` extern symbols (FFT planner, dot_q15) supplied by
# `esp_dsp_fft.rs` resolve both the direct-Rust and the via-FFI path
# without duplication.
mfsk-ffi-ft8 = { path = "../../mfsk-ffi-ft8", default-features = false, features = ["embedded-fixed-point"] }
num-complex = { version = "0.4", default-features = false }

[build-dependencies]
embuild = "0.33"

# Pull in esp-dsp (Espressif managed component) for the FFT routines
# referenced by `src/esp_dsp_fft.rs`. Same configuration as the
# ESP32-S3 PoC — `dsps_fft2r_fc32_ae32_` exists on both LX6 (ESP32)
# and LX7 (S3).
[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp-dsp", version = "^1.4" }
bindings_header = "src/bindings.h"
bindings_module = "esp_dsp"
